# apps/api/internal/db/ent/account_create.go
@@ -97,6 +97,34 @@ func (_c *AccountCreate) SetNillableCreatedAt(v *time.Time) *AccountCreate {
 	return _c
 }
 
+// SetStatus sets the "status" field.
+func (_c *AccountCreate) SetStatus(v account.Status) *AccountCreate {
+	_c.mutation.SetStatus(v)
+	return _c
+}
+
+// SetNillableStatus sets the "status" field if the given value is not nil.
+func (_c *AccountCreate) SetNillableStatus(v *account.Status) *AccountCreate {
+	if v != nil {
+		_c.SetStatus(*v)
+	}
+	return _c
+}
+
+// SetClosedAt sets the "closed_at" field.
+func (_c *AccountCreate) SetClosedAt(v time.Time) *AccountCreate {
+	_c.mutation.SetClosedAt(v)
+	return _c
+}
+
+// SetNillableClosedAt sets the "closed_at" field if the given value is not nil.
+func (_c *AccountCreate) SetNillableClosedAt(v *time.Time) *AccountCreate {
+	if v != nil {
+		_c.SetClosedAt(*v)
+	}
+	return _c
+}
+
 // AddSnapshotIDs adds the "snapshots" edge to the AccountSnapshot entity by IDs.
 func (_c *AccountCreate) AddSnapshotIDs(ids ...int) *AccountCreate {
 	_c.mutation.AddSnapshotIDs(ids...)
@@ -185,6 +213,10 @@ func (_c *AccountCreate) defaults() {
 		v := account.DefaultCreatedAt()
 		_c.mutation.SetCreatedAt(v)
 	}
+	if _, ok := _c.mutation.Status(); !ok {
+		v := account.DefaultStatus
+		_c.mutation.SetStatus(v)
+	}
 }
 
 // check runs all checks and user-defined validators on the builder.
@@ -218,6 +250,14 @@ func (_c *AccountCreate) check() error {
 	}
 	if _, ok := _c.mutation.CreatedAt(); !ok {
 		return &ValidationError{Name: "created_at", err: errors.New(`ent: missing required field "Account.created_at"`)}
+	}
+	if _, ok := _c.mutation.Status(); !ok {
+		return &ValidationError{Name: "status", err: errors.New(`ent: missing required field "Account.status"`)}
+	}
+	if v, ok := _c.mutation.Status(); ok {
+		if err := account.StatusValidator(v); err != nil {
+			return &ValidationError{Name: "status", err: fmt.Errorf(`ent: validator failed for field "Account.status": %w`, err)}
+		}
 	}
 	return nil
 }
@@ -272,6 +312,14 @@ func (_c *AccountCreate) createSpec() (*Account, *sqlgraph.CreateSpec) {
 	if value, ok := _c.mutation.CreatedAt(); ok {
 		_spec.SetField(account.FieldCreatedAt, field.TypeTime, value)
 		_node.CreatedAt = value
+	}
+	if value, ok := _c.mutation.Status(); ok {
+		_spec.SetField(account.FieldStatus, field.TypeEnum, value)
+		_node.Status = value
+	}
+	if value, ok := _c.mutation.ClosedAt(); ok {
+		_spec.SetField(account.FieldClosedAt, field.TypeTime, value)
+		_node.ClosedAt = &value
 	}
 	if nodes := _c.mutation.SnapshotsIDs(); len(nodes) > 0 {
 		edge := &sqlgraph.EdgeSpec{
